@@ -1,6 +1,8 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ * 05Aug2015 papi_best_set now checks whether counters and created eventsets
+               are 0 or not
  + 20Jul2015 Support for minimum number of cycles of reference in PEBS
  * 16Jul2015 Fix missing pthread_mutex_unlock in persistent request
  + 08Jul2015 Imported first bits for sionlib
